// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/luci/luci-go/common/api/template/template.proto";

package dmTemplate;

// File represents a file full of DM template definitions.
message File {
  // Template defines a single template.
  message Template {
    string distributor_config_name = 1;
    template.File.Template payload = 2;
  }
  map<string, Template> template = 1;
}
